--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.4.4</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>ru.fool</groupId>
+		<artifactId>foolish-shop</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
-	<groupId>com.example</groupId>
 	<artifactId>manager-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>manager-app</name>
@@ -17,6 +15,14 @@
 	<licenses>
 		<license/>
 	</licenses>
+	<profiles>
+		<profile>
+			<id>standalone</id>
+			<properties>
+				<activeProfiles>standalone</activeProfiles>
+			</properties>
+		</profile>
+	</profiles>
 	<developers>
 		<developer/>
 	</developers>
@@ -59,6 +65,8 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+			<scope>provided</scope>
+			<version>1.18.38</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -69,18 +77,6 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</path>
-					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
